Increase main window width

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Csaladfa"
         x:Class="Csaladfa.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="800" Width="840"
+        Title="MainWindow" Height="800" Width="940"
         ResizeMode="NoResize"
         Closing="Window_Closing">
     <Grid>
@@ -18,7 +18,7 @@
             <ColumnDefinition Width="400"/>
             <!--<ColumnDefinition Width="*"/>-->
             <ColumnDefinition Width="10"/>
-            <ColumnDefinition Width="390"/>
+            <ColumnDefinition Width="530"/>
         </Grid.ColumnDefinitions>
         <Menu Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4">
             <MenuItem Header="Új...">
@@ -55,14 +55,14 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <TabControl Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Width="400">
+            <TabControl Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Width="500">
                 <TabItem>
                     <TabItem.Header>
                         <Label Content="Adatok"/>
                     </TabItem.Header>
                     <Grid Margin="10,10,10,10">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="140"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
@@ -84,19 +84,19 @@
                         </Grid.RowDefinitions>
 
                         <Label Content="Keresztnév:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0"/>
-                        <TextBox x:Name="PersonSurnameEntry" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Grid.Row="0" Grid.Column="1"/>
+                        <TextBox x:Name="PersonSurnameEntry" HorizontalAlignment="Stretch" VerticalAlignment="Center" Grid.Row="0" Grid.Column="1"/>
 
                         <Label Content="Leánykori Keresztnév:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0"/>
-                        <TextBox x:Name="PersonMaidenSurnameEntry" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Grid.Row="1" Grid.Column="1"/>
+                        <TextBox x:Name="PersonMaidenSurnameEntry" HorizontalAlignment="Stretch" VerticalAlignment="Center" Grid.Row="1" Grid.Column="1"/>
 
                         <Label Content="Vezetéknév:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="2" Grid.Column="0"/>
-                        <TextBox x:Name="PersonForenameEntry" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Grid.Row="2" Grid.Column="1"/>
+                        <TextBox x:Name="PersonForenameEntry" HorizontalAlignment="Stretch" VerticalAlignment="Center" Grid.Row="2" Grid.Column="1"/>
 
                         <Label Content="Leánykori Vezetéknév:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="3" Grid.Column="0"/>
-                        <TextBox x:Name="PersonMaidenForenameEntry" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Grid.Row="3" Grid.Column="1"/>
+                        <TextBox x:Name="PersonMaidenForenameEntry" HorizontalAlignment="Stretch" VerticalAlignment="Center" Grid.Row="3" Grid.Column="1"/>
 
                         <Label Content="Nem:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="4" Grid.Column="0"/>
-                        <ComboBox x:Name="GenderCombobox" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Height="25" SelectedIndex="0" Grid.Row="4" Grid.Column="1">
+                        <ComboBox x:Name="GenderCombobox" HorizontalAlignment="Right" VerticalAlignment="Center" Width="100" Height="25" SelectedIndex="0" Grid.Row="4" Grid.Column="1">
                             <ComboBoxItem Content="(Ismeretlen)" Foreground="Gray"/>
                             <ComboBoxItem Content="Férfi"/>
                             <ComboBoxItem Content="Nő"/>
@@ -116,7 +116,7 @@
                         </Grid>
 
                         <Label Content="Születési Hely:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="6" Grid.Column="0"/>
-                        <ComboBox x:Name="PersonBirthPlaceCombobox" SelectedIndex="0" DisplayMemberPath="DisplayName" Width="200" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="6" Grid.Column="1"/>
+                        <ComboBox x:Name="PersonBirthPlaceCombobox" SelectedIndex="0" DisplayMemberPath="DisplayName" HorizontalAlignment="Stretch" VerticalAlignment="Center" Grid.Row="6" Grid.Column="1"/>
 
                         <Label Content="Halál Ideje:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="7" Grid.Column="0"/>
                         <Grid Width="200" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="7" Grid.Column="1">
@@ -131,13 +131,13 @@
                         </Grid>
 
                         <Label Content="Halál Helye:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="8" Grid.Column="0"/>
-                        <ComboBox x:Name="PersonDeathPlaceCombobox" SelectedIndex="0" DisplayMemberPath="DisplayName" Width="200" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="8" Grid.Column="1"/>
+                        <ComboBox x:Name="PersonDeathPlaceCombobox" SelectedIndex="0" DisplayMemberPath="DisplayName" HorizontalAlignment="Stretch" VerticalAlignment="Center" Grid.Row="8" Grid.Column="1"/>
 
                         <Label Content="Foglalkozás:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="9" Grid.Column="0"/>
-                        <TextBox x:Name="PersonOccupationEntry" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Grid.Row="9" Grid.Column="1"/>
+                        <TextBox x:Name="PersonOccupationEntry" HorizontalAlignment="Stretch" VerticalAlignment="Center" Grid.Row="9" Grid.Column="1"/>
 
                         <Label Content="Megjegyzés:" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="10" Grid.Column="0"/>
-                        <TextBox x:Name="PersonNotesEntry" TextWrapping="Wrap" AcceptsReturn="True" SpellCheck.IsEnabled="True" HorizontalAlignment="Right" VerticalAlignment="Center" Width="200" Height="200" Grid.Row="10" Grid.Column="1"/>
+                        <TextBox x:Name="PersonNotesEntry" TextWrapping="Wrap" AcceptsReturn="True" SpellCheck.IsEnabled="True" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="200" Grid.Row="10" Grid.Column="1"/>
                     </Grid>
                 </TabItem>
                 <TabItem>
@@ -150,7 +150,7 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="25"></RowDefinition>
+                            <RowDefinition Height="Auto"></RowDefinition>
                             <RowDefinition Height="Auto"></RowDefinition>
                             <RowDefinition Height="Auto"></RowDefinition>
                             <RowDefinition Height="*"></RowDefinition>
@@ -162,14 +162,14 @@
                         -->
 
                         <Label Content="Házasságok:" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0"/>
-                        <ListView x:Name="PersonMarriageList" SelectionChanged="PersonMarriageList_SelectionChanged" MouseDoubleClick="PersonMarriageList_MouseDoubleClick" HorizontalAlignment="Left" VerticalAlignment="Center" Width="370" Height="200" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
+                        <ListView x:Name="PersonMarriageList" SelectionChanged="PersonMarriageList_SelectionChanged" MouseDoubleClick="PersonMarriageList_MouseDoubleClick" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="200" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2">
                             <ListView.View>
                                 <GridView>
-                                    <GridViewColumn Header="Házastárs" DisplayMemberBinding="{Binding spouseName}"/>
-                                    <GridViewColumn Header="Házasság Dátuma" DisplayMemberBinding="{Binding startDate}"/>
-                                    <GridViewColumn Header="Válás Dátuma" DisplayMemberBinding="{Binding endDate}"/>
-                                    <GridViewColumn Header="Hely" DisplayMemberBinding="{Binding placeName}"/>
-                                    <GridViewColumn Header="Törvényes" DisplayMemberBinding="{Binding isLegal}"/>
+                                    <GridViewColumn Width="Auto" Header="Házastárs" DisplayMemberBinding="{Binding spouseName}"/>
+                                    <GridViewColumn Width="Auto" Header="Házasság Dátuma" DisplayMemberBinding="{Binding startDate}"/>
+                                    <GridViewColumn Width="Auto" Header="Válás Dátuma" DisplayMemberBinding="{Binding endDate}"/>
+                                    <GridViewColumn Width="Auto" Header="Hely" DisplayMemberBinding="{Binding placeName}"/>
+                                    <GridViewColumn Width="Auto" Header="Törvényes" DisplayMemberBinding="{Binding isLegal}"/>
                                 </GridView>
                             </ListView.View>
                         </ListView>
